<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SmartCarSystem!</string>
    <string name="app_name">SmartCarSystem</string>
    <string name="app_name2">车载多媒体终端</string>

    <string-array name="addFileStype">
        <item>自动扫描</item>
        <item>添加目录</item>
        <item>添加文件</item>
    </string-array>
    <string-array name="delFileStype">
        <item>清空列表</item>
        <item>选择文件</item>
    </string-array>
    <string-array name="movieViewStype">
        <item>关闭退出</item>
        <item>返回主页</item>
        <item>全屏播放</item>
    </string-array>
    <string-array name="moviePlayStype">
        <item>随机播放</item>
        <item>列表循环</item>
        <item>单部循环</item>
        <item>顺序播放</item>
    </string-array>

    <!-- <string name="app_name">TMap</string> -->
    <string name="real_time_traffic">实时路况</string>
    <string name="choose_layer">选择图层</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="search_location">查询地址</string>
    <string name="search_transit">交通查询</string>
    <string name="search_poi">搜索</string>
    <string name="exit_map">退出</string>
    <string name="dialog_input_address">请输入地址：</string>
    <string name="dialog_input_latitude">请输入纬度：</string>
    <string name="dialog_input_longitude">请输入经度：</string>
    <string name="toplayout_tv_search">查询</string>
    <string name="search_title">搜索关键字</string>

    <!-- <string name="app_name">androidTest1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_androidtest">androidtest</string> -->
    <string-array name="bgstyle">
        <item >环保家具</item>
        <item >羊皮纸</item>
        <item >养眼色</item>
        <item >梦幻</item>
        <item >实木羊皮纸</item>
        <item >仿古画卷</item>
    </string-array>
    <string name="back">返回</string>
    <string name="welcomeSMS">欢迎使用短信收发器!"</string>
    <string name="delete">删除</string>
    <string name="resendto">转发</string>
    <string name="sender">发件人:</string>
    <string name="input_new_num">请输入新收件人号码:</string>
    <string name="receiver">接收者:</string>
    <string name="cancle">取 消</string>
    <string name="input_content">输入内容</string>
    <string name="send">发  送</string>
    <string name="clear">清  空</string>
    <string name="confirm">确 定</string>
    <string name="time">时间:</string>
    <string name="GUET">桂林电子科技大学</string>
    
</resources>