<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="420dip"
        android:layout_height="match_parent"
        android:background="@drawable/messagesendbg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/sender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" >
            </TextView>

            <EditText
                android:id="@+id/editTextMessageBoxPerson"
                style="@style/edittext_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:focusable="false"
                android:hint="@string/sender"
                android:textColor="#000000"
                android:textSize="22dip" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dip"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" >
            </TextView>

            <EditText
                android:id="@+id/editTextMessageBoxData"
                style="@style/edittext_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:focusable="false"
                android:hint="@string/time"
                android:maxLines="1"
                android:textSize="22dip" >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextMessageBoxContex"
            style="@style/edittext_style"
            android:layout_width="fill_parent"
            android:layout_height="120dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:gravity="top"
            android:hint="@string/GUET"
            android:inputType="textMultiLine"
            android:paddingRight="10dip" >

        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="14dip"
            android:layout_marginTop="5dip"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/buttonMessageLookSend"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/button_selector"
                android:text="@string/resendto"
                android:textSize="18dip" />

            <Button
                android:id="@+id/buttonMessageLookDel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/button_selector"
                android:text="@string/delete"
                android:textSize="18dip" />

            <Button
                android:id="@+id/buttonMessageLookReturn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/button_selector"
                android:text="@string/back"
                android:textSize="18dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/messagelook"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listViewMessageLook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:scrollbarFadeDuration="0"
            android:scrollingCache="false" >
        </ListView>
    </LinearLayout>

</LinearLayout>